@@ -1,3 +1,8 @@
+2010-11-18	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* mscan/mscan-base.c: Do not use sleep mode to enter init mode.  Do
+	not wait for sleep mode acknowledge.
+
 2010-11-12	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* make/custom/dp2.cfg, startup/linkcmds.dp2: New files.
